# Raytracing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Raytracing.sln
Raytracing/: Camera.cpp  Camera.h  Color.cpp  Color.h  Cube.cpp  Entity.cpp  Entity.h  Light.cpp  Light.h  Main.cpp  Material.cpp  Material.h  Object.cpp  Object.h  Plan.h  Point.cpp  Point.h  Ray.cpp  Ray.h  Raytracer.h  Raytracing.vcxproj  Raytracing.vcxproj.filters  Raytracing.vcxproj.filters.rej  Raytracing.vcxproj.rej  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vector.cpp  Vector.h  matrix.cpp  matrix.h
resources/serialized/: Scene1.scene  Scene2.scene
src/: Main.cpp  Raytracer.cpp  Setup.cpp  Setup.h
src/Materials/: Color.cpp  Color.h  Material.cpp  Material.h
src/Math/: Matrix.cpp  Matrix.h  Point.cpp  Point.h  Ray.cpp  Ray.h  Vector.cpp  Vector.h
src/Objects/: Camera.cpp  Camera.h  Carre.cpp  Carre.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Object.h  Plan.cpp  Plan.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
src/Objects/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Rendering/: Image.cpp  Image.h  Raytracer.cpp  Raytracer.h  SkySphere.cpp  SkySphere.h  Skybox.cpp  Skybox.h
src/Scene/: Scene.cpp  Scene.h
src/Serialization/: FileLoader.cpp  FileLoader.h
